refactor: Code of a lambda to have only one invocation possibly throwing a runtime exception
Also:
- add comment "expected" in empty catch blocks in tests
- replace Arrays.asList() by List.of()
- simplify assertions
- fix typos / grammar issues in comments

Resolves Sonar issues of type java:S5778 Only one method invocation is expected when testing runtime exceptions

related to #88