@@ -256,7 +256,9 @@ public class TaskServiceTest {
     try {
       taskService.saveTask(task);
       fail("It should not be possible to save a task with a non existing parent task.");
-    } catch (NotValidException e) {}
+    } catch (NotValidException e) {
+      // expected
+    }
   }
 
   @Test
@@ -379,7 +381,7 @@ public class TaskServiceTest {
     taskService.saveTask(task);
     String taskId = task.getId();
 
-    // Deleting comments of a task that doesnt have any comments should silently ignored
+    // Deleting comments of a task that doesn't have any comments should be silently ignored
     assertThatCode(() -> taskService.deleteTaskComments(taskId))
       .doesNotThrowAnyException();
 
@@ -615,7 +617,7 @@ public class TaskServiceTest {
     ProcessInstance processInstance = runtimeService.startProcessInstanceByKey("oneTaskProcess");
     String processInstanceId = processInstance.getId();
 
-    // Deleting comments of a task that doesn't have any comments should silently ignored
+    // Deleting comments of a task that doesn't have any comments should be silently ignored
     assertThatCode(() -> taskService.deleteProcessInstanceComments(processInstanceId))
       .doesNotThrowAnyException();
   }
@@ -813,7 +815,9 @@ public class TaskServiceTest {
         taskService.createComment(taskId, null, null);
         fail("Expected process engine exception");
       }
-      catch (ProcessEngineException e) {}
+      catch (ProcessEngineException e) {
+        // expected
+      }
       finally {
         taskService.deleteTask(task.getId(), true);
       }
@@ -828,7 +832,9 @@ public class TaskServiceTest {
         taskService.createComment(null, null, "test");
         fail("Expected process engine exception");
       }
-      catch (ProcessEngineException e){}
+      catch (ProcessEngineException e){
+        // expected
+      }
     }
   }
 
@@ -2108,8 +2114,9 @@ public class TaskServiceTest {
 
   @Test
   public void testSetDueDateUnexistingTaskId() {
+    Date dueDate = new Date();
     try {
-      taskService.setDueDate("unexistingtask", new Date());
+      taskService.setDueDate("unexistingtask", dueDate);
       fail("ProcessEngineException expected");
     } catch (NotFoundException ae) {
       testRule.assertTextPresent("Cannot find task with id unexistingtask", ae.getMessage());
@@ -2118,8 +2125,9 @@ public class TaskServiceTest {
 
   @Test
   public void testSetDueDateNullTaskId() {
+    Date dueDate = new Date();
     try {
-      taskService.setDueDate(null, new Date());
+      taskService.setDueDate(null, dueDate);
       fail("ProcessEngineException expected");
     } catch (NullValueException ae) {
       testRule.assertTextPresent("taskId is null", ae.getMessage());
@@ -2145,8 +2153,9 @@ public class TaskServiceTest {
 
   @Test
   public void testSetFollowUpDateUnexistingTaskId() {
+    Date followUpDate = new Date();
     try {
-      taskService.setFollowUpDate("unexistingtask", new Date());
+      taskService.setFollowUpDate("unexistingtask", followUpDate);
       fail("ProcessEngineException expected");
     } catch (NotFoundException ae) {
       testRule.assertTextPresent("Cannot find task with id unexistingtask", ae.getMessage());
@@ -2155,8 +2164,9 @@ public class TaskServiceTest {
 
   @Test
   public void testSetFollowUpDateNullTaskId() {
+    Date followUpDate = new Date();
     try {
-      taskService.setFollowUpDate(null, new Date());
+      taskService.setFollowUpDate(null, followUpDate);
       fail("ProcessEngineException expected");
     } catch (NullValueException ae) {
       testRule.assertTextPresent("taskId is null", ae.getMessage());
@@ -2181,7 +2191,7 @@ public class TaskServiceTest {
   }
 
   /**
-   * @see http://jira.codehaus.org/browse/ACT-1059
+   * @see <a href="http://jira.codehaus.org/browse/ACT-1059">ACT-1059</a>
    */
   @Test
   public void testSetDelegationState() {
@@ -2434,39 +2444,41 @@ public class TaskServiceTest {
     runtimeService.startProcessInstanceByKey("oneTaskProcess");
     Task task = taskService.createTaskQuery().singleResult();
     assertNotNull(task);
+    String taskId = task.getId();
+    List<String> taskIds = List.of(taskId);
 
     try {
-      taskService.deleteTask(task.getId());
+      taskService.deleteTask(taskId);
     } catch(ProcessEngineException ae) {
       assertEquals("The task cannot be deleted because is part of a running process", ae.getMessage());
     }
 
     try {
-      taskService.deleteTask(task.getId(), true);
+      taskService.deleteTask(taskId, true);
     } catch(ProcessEngineException ae) {
       assertEquals("The task cannot be deleted because is part of a running process", ae.getMessage());
     }
 
     try {
-      taskService.deleteTask(task.getId(), "test");
+      taskService.deleteTask(taskId, "test");
     } catch(ProcessEngineException ae) {
       assertEquals("The task cannot be deleted because is part of a running process", ae.getMessage());
     }
 
     try {
-      taskService.deleteTasks(Arrays.asList(task.getId()));
+      taskService.deleteTasks(Collections.singletonList(taskId));
     } catch(ProcessEngineException ae) {
       assertEquals("The task cannot be deleted because is part of a running process", ae.getMessage());
     }
 
     try {
-      taskService.deleteTasks(Arrays.asList(task.getId()), true);
+      taskService.deleteTasks(taskIds, true);
     } catch(ProcessEngineException ae) {
       assertEquals("The task cannot be deleted because is part of a running process", ae.getMessage());
     }
 
     try {
-      taskService.deleteTasks(Arrays.asList(task.getId()), "test");
+      taskService.deleteTasks(taskIds, "test");
     } catch(ProcessEngineException ae) {
       assertEquals("The task cannot be deleted because is part of a running process", ae.getMessage());
     }
@@ -2495,7 +2507,7 @@ public class TaskServiceTest {
     Task task = taskService.createTaskQuery().singleResult();
     assertNotNull(task);
     String taskId = task.getId();
-    var taskIds = Arrays.asList(task.getId());
+    var taskIds = Collections.singletonList(task.getId());
 
     try {
       taskService.deleteTask(taskId);
@@ -2652,10 +2664,13 @@ public class TaskServiceTest {
   @RequiredHistoryLevel(ProcessEngineConfiguration.HISTORY_AUDIT)
   @Test
   public void testCreateTaskAttachmentWithNullTaskAndProcessInstance() {
+    var content = new ByteArrayInputStream("someContent".getBytes());
     try {
-      taskService.createAttachment("web page", null, null, "weatherforcast", "temperatures and more", new ByteArrayInputStream("someContent".getBytes()));
+      taskService.createAttachment("web page", null, null, "weatherforcast", "temperatures and more", content);
       fail("expected process engine exception");
-    } catch (ProcessEngineException e) {}
+    } catch (ProcessEngineException e) {
+      // expected
+    }
   }
 
   @Deployment(resources={
@@ -2682,7 +2697,9 @@ public class TaskServiceTest {
       try {
         taskService.deleteAttachment(null);
         fail("expected process engine exception");
-      } catch (ProcessEngineException e) {}
+      } catch (ProcessEngineException e) {
+        // expected
+      }
     }
   }
 
@@ -2712,7 +2729,9 @@ public class TaskServiceTest {
       try {
         taskService.deleteTaskAttachment(null, null);
         fail("expected process engine exception");
-      } catch (ProcessEngineException e) {}
+      } catch (ProcessEngineException e) {
+        // expected
+      }
     }
   }
 
@@ -2723,7 +2742,9 @@ public class TaskServiceTest {
       try {
         taskService.deleteTaskAttachment(null, "myAttachmentId");
         fail("expected process engine exception");
-      } catch(ProcessEngineException e) {}
+      } catch(ProcessEngineException e) {
+        // expected
+      }
     }
   }
 
@@ -2782,6 +2803,7 @@ public class TaskServiceTest {
       ((TaskServiceImpl) taskService).updateVariablesLocal("nonExistingId", modifications, deletions);
       fail("expected process engine exception");
     } catch (ProcessEngineException e) {
+      // expected
     }
   }
 
@@ -2800,6 +2822,7 @@ public class TaskServiceTest {
       ((TaskServiceImpl) taskService).updateVariablesLocal(null, modifications, deletions);
       fail("expected process engine exception");
     } catch (ProcessEngineException e) {
+      // expected
     }
   }
 
@@ -2850,6 +2873,7 @@ public class TaskServiceTest {
       ((TaskServiceImpl) taskService).updateVariables("nonExistingId", modifications, deletions);
       fail("expected process engine exception");
     } catch (ProcessEngineException e) {
+      // expected
     }
   }
 
@@ -2868,6 +2892,7 @@ public class TaskServiceTest {
       ((TaskServiceImpl) taskService).updateVariables(null, modifications, deletions);
       fail("expected process engine exception");
     } catch (ProcessEngineException e) {
+      // expected
     }
   }
 
@@ -2921,7 +2946,7 @@ public class TaskServiceTest {
     // this works
     VariableMap variablesTyped = taskService.getVariablesTyped(taskId, false);
     assertNotNull(variablesTyped.getValueTyped("broken"));
-    variablesTyped = taskService.getVariablesTyped(taskId, Arrays.asList("broken"), false);
+    variablesTyped = taskService.getVariablesTyped(taskId, List.of("broken"), false);
     assertNotNull(variablesTyped.getValueTyped("broken"));
 
     // this does not
@@ -2933,7 +2958,7 @@ public class TaskServiceTest {
 
     // this does not
     try {
-      taskService.getVariablesTyped(taskId, Arrays.asList("broken"), true);
+      taskService.getVariablesTyped(taskId, List.of("broken"), true);
     } catch(ProcessEngineException e) {
       testRule.assertTextPresent("Cannot deserialize object", e.getMessage());
     }
@@ -2970,7 +2995,7 @@ public class TaskServiceTest {
     // this works
     VariableMap variablesTyped = taskService.getVariablesLocalTyped(taskId, false);
     assertNotNull(variablesTyped.getValueTyped("broken"));
-    variablesTyped = taskService.getVariablesLocalTyped(taskId, Arrays.asList("broken"), false);
+    variablesTyped = taskService.getVariablesLocalTyped(taskId, List.of("broken"), false);
     assertNotNull(variablesTyped.getValueTyped("broken"));
 
     // this does not
@@ -2982,7 +3007,7 @@ public class TaskServiceTest {
 
     // this does not
     try {
-      taskService.getVariablesLocalTyped(taskId, Arrays.asList("broken"), true);
+      taskService.getVariablesLocalTyped(taskId, List.of("broken"), true);
     } catch(ProcessEngineException e) {
       testRule.assertTextPresent("Cannot deserialize object", e.getMessage());
     }
@@ -3012,8 +3037,8 @@ public class TaskServiceTest {
     // then
     VariableInstance variable = runtimeService.createVariableInstanceQuery().singleResult();
 
-    assertEquals(variable.getName(), variableName);
-    assertEquals(variable.getValue(), variableValue);
+    assertEquals(variableName, variable.getName());
+    assertEquals(variableValue, variable.getValue());
   }
 
   @Deployment(resources={"org/operaton/bpm/engine/test/api/cmmn/oneTaskCase.cmmn"})
@@ -3042,8 +3067,8 @@ public class TaskServiceTest {
     // then
     VariableInstance variable = runtimeService.createVariableInstanceQuery().singleResult();
 
-    assertEquals(variable.getName(), variableName);
-    assertEquals(variable.getValue(), variableAnotherValue);
+    assertEquals(variableName, variable.getName());
+    assertEquals(variableAnotherValue, variable.getValue());
   }
 
   @Deployment(resources={"org/operaton/bpm/engine/test/api/twoTasksProcess.bpmn20.xml"})
@@ -3066,8 +3091,8 @@ public class TaskServiceTest {
     // then
     VariableInstance variable = runtimeService.createVariableInstanceQuery().singleResult();
 
-    assertEquals(variable.getName(), variableName);
-    assertEquals(variable.getValue(), variableAnotherValue);
+    assertEquals(variableName, variable.getName());
+    assertEquals(variableAnotherValue, variable.getValue());
   }
 
   @Deployment(resources={"org/operaton/bpm/engine/test/api/cmmn/oneTaskCase.cmmn"})
@@ -3232,9 +3257,10 @@ public class TaskServiceTest {
     // given
     ProcessInstance processInstance = runtimeService.startProcessInstanceByKey("oneTaskProcess");
     Task task = taskService.createTaskQuery().processInstanceId(processInstance.getId()).singleResult();
+    String taskId = task.getId();
 
     // when/then
-    assertThatThrownBy(() -> taskService.handleBpmnError(task.getId(), ""))
+    assertThatThrownBy(() -> taskService.handleBpmnError(taskId, ""))
       .isInstanceOf(BadUserRequestException.class)
       .hasMessageContaining("errorCode is empty");
   }
@@ -3245,9 +3271,10 @@ public class TaskServiceTest {
     // given
     ProcessInstance processInstance = runtimeService.startProcessInstanceByKey("oneTaskProcess");
     Task task = taskService.createTaskQuery().processInstanceId(processInstance.getId()).singleResult();
+    String taskId = task.getId();
 
     // when/then
-    assertThatThrownBy(() -> taskService.handleBpmnError(task.getId(), null))
+    assertThatThrownBy(() -> taskService.handleBpmnError(taskId, null))
       .isInstanceOf(BadUserRequestException.class)
       .hasMessageContaining("errorCode is null");
   }
@@ -3345,13 +3372,14 @@ public class TaskServiceTest {
     ProcessInstance processInstance = runtimeService.startProcessInstanceByKey(PROCESS_KEY);
     Task task = taskService.createTaskQuery().processInstanceId(processInstance.getId()).singleResult();
     assertEquals(USER_TASK_THROW_ESCALATION, task.getTaskDefinitionKey());
+    String taskId = task.getId();
 
     // when/then
-    assertThatThrownBy(() -> taskService.handleEscalation(task.getId(), ""))
+    assertThatThrownBy(() -> taskService.handleEscalation(taskId, ""))
       .isInstanceOf(BadUserRequestException.class)
       .hasMessageContaining("escalationCode is empty");
 
-    assertThatThrownBy(() -> taskService.handleEscalation(task.getId(), null))
+    assertThatThrownBy(() -> taskService.handleEscalation(taskId, null))
       .isInstanceOf(BadUserRequestException.class)
       .hasMessageContaining("escalationCode is null");
   }
@@ -3370,9 +3398,10 @@ public class TaskServiceTest {
     ProcessInstance processInstance = runtimeService.startProcessInstanceByKey(PROCESS_KEY);
     Task task = taskService.createTaskQuery().processInstanceId(processInstance.getId()).singleResult();
     assertEquals(USER_TASK_THROW_ESCALATION, task.getTaskDefinitionKey());
+    String taskId = task.getId();
 
     // when/then
-    assertThatThrownBy(() -> taskService.handleEscalation(task.getId(), ESCALATION_CODE))
+    assertThatThrownBy(() -> taskService.handleEscalation(taskId, ESCALATION_CODE))
       .isInstanceOf(ProcessEngineException.class)
       .hasMessageContaining("Execution with id '" + task.getTaskDefinitionKey()
       + "' throws an escalation event with escalationCode '" + ESCALATION_CODE
